--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<div class="foolscreen__content">
 		<div class="container">
 			<div class="main__info">
-				<h1 class="main__title">Карпати <br>
+				<h1 class="main__title">Подорожі <br>
 					<span>чекають тебе</span>
 				</h1>
 				<div class="btn__block">
