--- a/index.html
+++ b/index.html
@@ -59,5 +59,104 @@
 			<source src="video/home_cover.mp4" type="video/mp4">
 		</video>
 	</main>
+	<section class="advice container">
+		<h2 class="section__title">Рекомендовані тури</h2>
+		<div class="advice__list">
+			<a href="3" class="advice__link">
+				<img class="advice__img" src="images/advice_1.jpg" alt="advice images">
+				<div class="advice__info">
+					<h3 class="advice__title">Озера Чорногори </h3>
+					<h4 class="advice__subtitle">Сходження на Говерлу та Петрос</h4>
+					<p class="advice__price">2500 ₴</p>
+					<div class="info__list">
+						<dl class="info__item">
+							<dt class="advice__key">Локація</dt>
+							<dd class="advice__value">Україна</dd>
+						</dl>
+						<dl class="info__item">
+							<dt class="advice__key">Складність</dt>
+							<dd class="advice__value">Низька</dd>
+						</dl>
+						<dl class="info__item">
+							<dt class="advice__key">Тривалість</dt>
+							<dd class="advice__value">3 дні, 2 ночі</dd>
+						</dl>
+						<dl class="info__item">
+							<dt class="advice__key">Склад групи</dt>
+							<dd class="advice__value">12 осіб</dd>
+						</dl>
+						<dl class="info__item">
+							<dt class="advice__key">Інструктори</dt>
+							<dd class="advice__value">Петрикович Іван<br>Бушко Анна</dd>
+						</dl>
+						<p class="info__link info-box__link">Деталі</p>
+					</div>
+				</div>
+			</a>
+			<a href="3" class="advice__link">
+				<img class="advice__img" src="images/advice_2.jpg" alt="advice images">
+				<div class="advice__info">
+					<h3 class="advice__title">Східні Горгани</h3>
+					<h4 class="advice__subtitle">Піший похід у Карпати</h4>
+					<p class="advice__price">2800 ₴</p>
+					<div class="info__list">
+						<dl class="info__item">
+							<dt class="advice__key">Локація</dt>
+							<dd class="advice__value">Україна</dd>
+						</dl>
+						<dl class="info__item">
+							<dt class="advice__key">Складність</dt>
+							<dd class="advice__value">Середня</dd>
+						</dl>
+						<dl class="info__item">
+							<dt class="advice__key">Тривалість</dt>
+							<dd class="advice__value">3 дні, 2 ночі</dd>
+						</dl>
+						<dl class="info__item">
+							<dt class="advice__key">Склад групи</dt>
+							<dd class="advice__value">12 осіб</dd>
+						</dl>
+						<dl class="info__item">
+							<dt class="advice__key">Інструктори</dt>
+							<dd class="advice__value">Дідко Карина<br>Смішка Дмитро</dd>
+						</dl>
+						<p class="info__link info-box__link">Деталі</p>
+					</div>
+				</div>
+			</a>
+			<a href="3" class="advice__link">
+				<img class="advice__img" src="images/advice_3.jpg" alt="advice images">
+				<div class="advice__info">
+					<h3 class="advice__title">Високі Татри</h3>
+					<h4 class="advice__subtitle">Сходження на Говерлу та Петрос</h4>
+					<p class="advice__price">250 €</p>
+					<div class="info__list">
+						<dl class="info__item">
+							<dt class="advice__key">Локація</dt>
+							<dd class="advice__value">Польща</dd>
+						</dl>
+						<dl class="info__item">
+							<dt class="advice__key">Складність</dt>
+							<dd class="advice__value">Висока</dd>
+						</dl>
+						<dl class="info__item">
+							<dt class="advice__key">Тривалість</dt>
+							<dd class="advice__value">6 днів, 5 ночей</dd>
+						</dl>
+						<dl class="info__item">
+							<dt class="advice__key">Склад групи</dt>
+							<dd class="advice__value">8 осіб</dd>
+						</dl>
+						<dl class="info__item">
+							<dt class="advice__key">Інструктори</dt>
+							<dd class="advice__value">Тричма Констянтин<br>Бачковський Дмитро</dd>
+						</dl>
+						<p class="info__link info-box__link">Деталі</p>
+					</div>
+				</div>
+			</a>
+		</div>
+		<a href="#" class="info__link advice-box__link hover">Дивитись всі тури</a>
+	</section>
 </body>
 </html>
