info-price section

--- a/index.html
+++ b/index.html
@@ -158,5 +158,29 @@
 		</div>
 		<a href="#" class="info__link advice-box__link hover">Дивитись всі тури</a>
 	</section>
+	<section class="info__price container">
+		<h2 class="section__title">Що входить у вартість</h2>
+		<div class="info__price-content">
+			<div class="info__price-text">
+				<h3 class="info__price-title">Входить: </h3>
+				<ul class="info__price-list">
+					<li class="info__price-item marck-green">туристична медична страховка</li>
+					<li class="info__price-item marck-green">аптечка</li>
+					<li class="info__price-item marck-green">рекреаційні збори</li>
+					<li class="info__price-item marck-green">прокат спорядження</li>
+					<li class="info__price-item marck-green">триразове харчування в поході</li>
+					<li class="info__price-item marck-green">послуги інструктора і провідника</li>
+					<li class="info__price-item marck-green">використання котлів і газове обладнання</li>
+				</ul>
+			</div>
+			<div class="info__price-text">
+				<h3 class="info__price-title">Не входить: </h3>
+				<ul class="info__price-list">
+					<li class="info__price-item marck-red">проїзд у транспорті, трансфери</li>
+					<li class="info__price-item marck-red">особисті додаткові витрати</li>
+				</ul>
+			</div>
+		</div>
+	</section>
 </body>
 </html>
