fix container width

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<source src="video/home_cover.webm" type="video/webm">
 			<source src="video/home_cover.mp4" type="video/mp4">
 		</video>
-	</main>
+	</main> <!--
 	<section class="advice container">
 		<h2 class="section__title">Рекомендовані тури</h2>
 		<div class="advice__list">
@@ -183,6 +183,6 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section>-->
 </body>
 </html>
