--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Alegreya+SC&family=Ubuntu&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/media1024.css" media="(max-width:1024px)">
 	<title>Camping</title>
 </head>
 <body>
@@ -58,7 +59,7 @@
 			<source src="video/home_cover.webm" type="video/webm">
 			<source src="video/home_cover.mp4" type="video/mp4">
 		</video>
-	</main> <!--
+	</main> 
 	<section class="advice container">
 		<h2 class="section__title">Рекомендовані тури</h2>
 		<div class="advice__list">
@@ -183,6 +184,6 @@
 				</div>
 			</div>
 		</div>
-	</section>-->
+	</section>
 </body>
 </html>
