tour page - main

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	<section class="advice container">
 		<h2 class="section__title">Рекомендовані тури</h2>
 		<div class="advice__list">
-			<a href="3" class="advice__link">
+			<a href="pages/tour.html" class="advice__link">
 				<img class="advice__img" src="images/advice_1.jpg" alt="advice images">
 				<div class="advice__info">
 					<h3 class="advice__title">Озера Чорногори </h3>
@@ -94,7 +94,7 @@
 					</div>
 				</div>
 			</a>
-			<a href="3" class="advice__link">
+			<a href="#" class="advice__link">
 				<img class="advice__img" src="images/advice_2.jpg" alt="advice images">
 				<div class="advice__info">
 					<h3 class="advice__title">Східні Горгани</h3>
@@ -125,7 +125,7 @@
 					</div>
 				</div>
 			</a>
-			<a href="3" class="advice__link">
+			<a href="#" class="advice__link">
 				<img class="advice__img" src="images/advice_3.jpg" alt="advice images">
 				<div class="advice__info">
 					<h3 class="advice__title">Високі Татри</h3>
@@ -185,5 +185,6 @@
 			</div>
 		</div>
 	</section>
+	<script src="js/script.js"></script>
 </body>
 </html>
