tour page - info section

--- a/pages/tour.html
+++ b/pages/tour.html
@@ -66,7 +66,46 @@
 		<img src="../images/tour__bg.jpg" alt="tour bg">
 	</div>
 </main>
-
+<section class="info">
+	<div class="container">
+		<h2 class="section__title">Загальна інформація</h2>
+		<div class="info__wrap">
+			<div class="list__wrap">
+			<div class="info__list">
+				<dl class="info__item">
+					<dt class="info__key">Локація</dt>
+					<dd class="info__value">Україна</dd>
+				</dl>
+				<dl class="info__item">
+					<dt class="info__key">Складність</dt>
+					<dd class="info__value">Низька</dd>
+				</dl>
+				<dl class="info__item">
+					<dt class="info__key">Тривалість</dt>
+					<dd class="info__value">3 дні, 2 ночі</dd>
+				</dl>
+				<dl class="info__item">
+					<dt class="info__key">Склад групи</dt>
+					<dd class="info__value">12 осіб</dd>
+				</dl>
+				<dl class="info__item">
+					<dt class="info__key">Інструктори</dt>
+					<dd class="info__value">Петрикович Іван<br>Бушко Анна</dd>
+				</dl>	</div>
+			<div class="prise__wrap">
+				<a class="btn main__btn" href="#">хочу з вами</a>
+				<p class="price">2500 ₴</p>
+			</div>
+		</div>
+			
+		<div class="video__wrap">
+			<video loop muted autoplay poster="images/home_cover.jpg" class="info__video">
+				<source src="../video/home_cover.webm" type="video/webm">
+				<source src="../video/home_cover.mp4" type="video/mp4">
+			</video>
+		</div>
+	</div></div>
+</section>
 	<script src="js/script.js"></script>
 </body>
 </html>
